--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: CursorFreeVIP-Windows
-        path: dist/CursorFreeVIP.exe
+        path: dist/*.exe
 
   build-macos-arm64:
     runs-on: macos-latest
@@ -69,7 +69,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: CursorFreeVIP-MacOS-ARM64
-        path: dist/CursorFreeVIP
+        path: dist/*
 
   build-linux:
     runs-on: ubuntu-22.04
@@ -96,7 +96,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: CursorFreeVIP-Linux
-        path: dist/CursorFreeVIP
+        path: dist/*
 
   build-macos-intel:
     runs-on: macos-latest
@@ -125,7 +125,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: CursorFreeVIP-MacOS-Intel
-        path: dist/CursorFreeVIP
+        path: dist/*
 
   create-release:
     needs: [build-windows, build-macos-arm64, build-linux, build-macos-intel]
