--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -162,36 +162,24 @@ jobs:
     steps:
       - name: Get version
         shell: bash
-        run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-          else
-            echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
-          fi
+        run: echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
           
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
+
+      - name: List files
+        run: ls -R artifacts/
           
-      - name: Prepare release files
-        run: |
-          cd artifacts
-          mv CursorFreeVIP_${{ env.VERSION }}_windows.exe/* .
-          mv CursorFreeVIP_${{ env.VERSION }}_mac_arm64/* .
-          mv CursorFreeVIP_${{ env.VERSION }}_linux/* .
-          mv CursorFreeVIP_${{ env.VERSION }}_mac_intel/* .
-          rm -rf CursorFreeVIP_${{ env.VERSION }}_*/*
-
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_windows.exe
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_arm64
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_intel
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_windows.exe/CursorFreeVIP.exe
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_arm64/CursorFreeVIP
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux/CursorFreeVIP
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_intel/CursorFreeVIP
           draft: false
           prerelease: false
         env:
