--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       version:
         description: 'Version number (e.g. 1.0.9)'
         required: true
-        default: '1.0.9'
+        default: '1.0.9-dev'
 
 permissions:
   contents: write
@@ -169,18 +169,25 @@ jobs:
         with:
           path: artifacts
 
-      - name: List files
-        run: ls -R artifacts/
-          
+      - name: Prepare release files
+        run: |
+          cd artifacts
+          for dir in */; do
+            base_name=$(basename "$dir")
+            mv "$dir"* "$base_name"
+            rmdir "$dir"
+          done
+          ls -la
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ env.VERSION }}
           files: |
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_windows.exe/CursorFreeVIP.exe
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_arm64/CursorFreeVIP
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux/CursorFreeVIP
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_intel/CursorFreeVIP
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_windows.exe
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_arm64
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_intel
           draft: false
           prerelease: false
         env:
