--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       version:
         description: 'Version number (e.g. 1.0.9)'
         required: true
-        default: '1.0.9-dev'
+        default: '1.4.01'
 
 permissions:
   contents: write
