feat: Add Linux ARM64 Support and Update Build Workflow
- Extend GitHub Actions workflow to build Linux x64 and ARM64 executables
- Update install script to detect Linux architecture (x64 or ARM64)
- Modify release process to include both Linux architecture artifacts
- Rename Linux build job to clarify x64 architecture

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         name: CursorFreeVIP_${{ env.VERSION }}_mac_arm64
         path: dist/CursorFreeVIP_${{ env.VERSION }}_mac_arm64
 
-  build-linux:
+  build-linux-x64:
     needs: create-tag
     runs-on: ubuntu-22.04
     
@@ -120,20 +120,55 @@ jobs:
         pip install pyinstaller
         pip install -r requirements.txt
         
-    - name: Build Linux executable
+    - name: Build Linux x64 executable
       env:
         VERSION: ${{ env.VERSION }}
       run: |
         pyinstaller build.spec
+        mv "dist/CursorFreeVIP_${{ env.VERSION }}_linux" "dist/CursorFreeVIP_${{ env.VERSION }}_linux_x64"
         echo "Contents of dist directory:"
         ls -la dist/
         
-    - name: Upload Linux artifact
+    - name: Upload Linux x64 artifact
       uses: actions/upload-artifact@v4
       with:
-        name: CursorFreeVIP_${{ env.VERSION }}_linux
-        path: dist/CursorFreeVIP_${{ env.VERSION }}_linux
+        name: CursorFreeVIP_${{ env.VERSION }}_linux_x64
+        path: dist/CursorFreeVIP_${{ env.VERSION }}_linux_x64
 
+  build-linux-arm64:
+    needs: create-tag
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: arm64
+    
+    - name: Set version
+      shell: bash
+      run: echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+    
+    - name: Build in ARM64 Docker container
+      run: |
+        docker run --rm --platform linux/arm64 -v ${{ github.workspace }}:/app -w /app arm64v8/python:3.9-slim bash -c "
+          apt-get update && apt-get install -y build-essential
+          pip install --upgrade pip
+          pip install pyinstaller
+          pip install -r requirements.txt
+          python -m PyInstaller build.spec
+          mv /app/dist/CursorFreeVIP_${{ env.VERSION }}_linux /app/dist/CursorFreeVIP_${{ env.VERSION }}_linux_arm64
+        "
+        echo "Contents of dist directory:"
+        ls -la dist/
+        
+    - name: Upload Linux ARM64 artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: CursorFreeVIP_${{ env.VERSION }}_linux_arm64
+        path: dist/CursorFreeVIP_${{ env.VERSION }}_linux_arm64
 
   build-macos-intel:
     needs: create-tag
@@ -171,9 +206,8 @@ jobs:
         name: CursorFreeVIP_${{ env.VERSION }}_mac_intel
         path: dist/CursorFreeVIP_${{ env.VERSION }}_mac_intel
 
-
   create-release:
-    needs: [build-windows, build-macos-arm64, build-linux, build-macos-intel]
+    needs: [build-windows, build-macos-arm64, build-linux-x64, build-linux-arm64, build-macos-intel]
     runs-on: ubuntu-22.04
     
     steps:
@@ -201,7 +235,8 @@ jobs:
           files: |
             artifacts/CursorFreeVIP_${{ env.VERSION }}_windows.exe/CursorFreeVIP_${{ env.VERSION }}_windows.exe
             artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_arm64/CursorFreeVIP_${{ env.VERSION }}_mac_arm64
-            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux/CursorFreeVIP_${{ env.VERSION }}_linux
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux_x64/CursorFreeVIP_${{ env.VERSION }}_linux_x64
+            artifacts/CursorFreeVIP_${{ env.VERSION }}_linux_arm64/CursorFreeVIP_${{ env.VERSION }}_linux_arm64
             artifacts/CursorFreeVIP_${{ env.VERSION }}_mac_intel/CursorFreeVIP_${{ env.VERSION }}_mac_intel
           draft: false
           prerelease: false
